--- a/ProfileMatch.Components/Admin/AdminCards.razor
+++ b/ProfileMatch.Components/Admin/AdminCards.razor
@@ -1,117 +1,120 @@
-﻿<MudTabs Elevation="1" Rounded="true" @ref="tabs">
-    <MudTabPanel Text="Selection Page"></MudTabPanel>
-    <MudTabPanel Text="Question 1 ">
+﻿@inject IStringLocalizer<LanguageService> L
+
+
+<MudTabs Elevation="1" Rounded="true" @ref="tabs">
+    <MudTabPanel Text=@L["Selection Page"]></MudTabPanel>
+    <MudTabPanel Text=@L["Question 1 "]>
         <MudGrid>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="What is important to me at work" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What is important to me at work"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
-                <MudItem xs="12" md="6">
-                    <MudTextField T="string" Label="What is important to me at work" Variant="Variant.Outlined"  Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3"  />
-                    <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
-                </MudItem>
+            <MudItem xs="12" md="6">
+                <MudTextField T="string" Label=@L["What is important to me at work"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
+            </MudItem>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="What is important to me at work" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What is important to me at work"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
         </MudGrid>
     </MudTabPanel>
-    <MudTabPanel Text="Question 2">
+    <MudTabPanel Text=@L["Question 2"]>
         <MudGrid>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="What is important for me" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What is important for me"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="12" md="6">
-                <MudTextField T="string" Label="What is important for me" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What is important for me"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="What is important for me" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What is important for me"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
         </MudGrid>
     </MudTabPanel>
-    <MudTabPanel Text="Question 3">
+    <MudTabPanel Text=@L["Question 3"]>
         <MudGrid>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="What are my goals" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What are my goals"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="12" md="6">
-                <MudTextField T="string" Label="What are my goals" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What are my goals"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="What are my goals" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["What are my goals"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
         </MudGrid>
     </MudTabPanel>
-    <MudTabPanel Text="Question 4">
+    <MudTabPanel Text=@L["Question 4"]>
         <MudGrid>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="My other skills" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["My other skills"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="12" md="6">
-                <MudTextField T="string" Label="My other skills" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3"  />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["My other skills"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="My other skills" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3"  />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["My other skills"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
         </MudGrid>
     </MudTabPanel>
-    <MudTabPanel Text="Question 5">
+    <MudTabPanel Text=@L["Question 5"]>
         <MudGrid>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="My hobbies" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["My hobbies"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="12" md="6">
-                <MudTextField T="string" Label="My hobbies" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3"  />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["My hobbies"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
             <MudItem xs="14" md="6">
-                <MudTextField T="string" Label="My hobbies" Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3"  />
-                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">Send</MudButton>
+                <MudTextField T="string" Label=@L["My hobbies"] Variant="Variant.Outlined" Counter="150" MaxLength="150" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Lines="3" />
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary">@L["Send"]</MudButton>
             </MudItem>
         </MudGrid>
     </MudTabPanel>
 </MudTabs>
 
 
-<MudText GutterBottom="true" Align="Align.Center" Class="mt-8"><b>Choose the question you want to answer</b></MudText>
+<MudText GutterBottom="true" Align="Align.Center" Class="mt-8"><b>@L["Choose the question you want to answer"]</b></MudText>
 <div class="d-flex justify-center">
-    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(0)">Selection page</MudButton>
-    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(1)">What is important to me at work</MudButton>
-    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(2)">What is important for me</MudButton>
+    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(0)">@L["Selection page"]</MudButton>
+    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(1)">@L["What is important to me at work"]</MudButton>
+    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(2)">@L["What is important for me"]</MudButton>
 
 </div>
 <div class="d-flex justify-center">
-    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(3)">What are my goals</MudButton>
-    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(4)">My other skills</MudButton>
-    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(5)">My hobbies</MudButton>
-    </div>
+    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(3)">@L["What are my goals"]</MudButton>
+    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(4)">@L["My other skills"]</MudButton>
+    <MudButton Variant="@Variant.Filled" Color="Color.Primary" OnClick="() => Activate(5)">@L["My hobbies"]</MudButton>
+</div>
 
-    @code
+@code
 {
-        MudTabs tabs;
+    MudTabs tabs;
 
-        void Activate(int index)
-        {
-            tabs.ActivatePanel(index);
-        }
-
-
-        private IEnumerable<string> MaxCharacters(string ch)
-        {
-            if (!string.IsNullOrEmpty(ch) && 150 < ch?.Length)
-                yield return "Max 100 characters";
-        }
+    void Activate(int index)
+    {
+        tabs.ActivatePanel(index);
     }
+
+
+    private IEnumerable<string> MaxCharacters(string ch)
+    {
+        if (!string.IsNullOrEmpty(ch) && 150 < ch?.Length)
+            yield return @L["Max 150 characters"];
+    }
+}
 
 
 
